--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,9 @@
   --footer-bg-clr: #2f303a;
   --nav-bg-clr: #ffffff;
   --btn-bg: #f5f4fa;
+
+  /* animation */
+  --animation: 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 body {
@@ -128,6 +131,9 @@ img {
 }
 
 .nav-links {
+  position: relative;
+  padding-top: 32px;
+  padding-bottom: 32px;
   font-family: inherit;
   font-weight: 500;
   font-size: 14px;
@@ -136,6 +142,24 @@ img {
   text-decoration: none;
 
   color: var(--secondary-txt-clr);
+
+  transition: color var(--animation);
+}
+
+.current {
+  color: var(--accent-clr);
+}
+
+.current::after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  content: '';
+  display: block;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: var(--accent-clr);
 }
 
 .header-list {
@@ -166,6 +190,17 @@ img {
   cursor: pointer;
 
   color: var(--main-txt-clr);
+  /* 
+  transition: color var(--animation); */
+}
+
+.header-socials-icon {
+  margin-right: 10px;
+  fill: var(--main-txt-clr);
+
+  transition: fill var(--animation);
+
+  /* fill: currentColor; -- ховер свг через наследование цвета */
 }
 
 .header-item:hover .header-contacts,
@@ -193,11 +228,6 @@ img {
   color: var(--accent-clr);
 }
 
-.header-socials-icon {
-  margin-right: 10px;
-  fill: var(--main-txt-clr);
-  /* fill: currentColor; -- ховер свг через наследование цвета */
-}
 /* Секция герой */
 
 .hero {
@@ -234,6 +264,55 @@ img {
   border-radius: 4px;
   color: var(--nav-bg-clr);
   background-color: var(--accent-clr);
+}
+
+/* Modal window */
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.2);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 25px;
+
+  width: 528px;
+  height: 581px;
+
+  background: var(--nav-bg-clr);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+
+.close {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  border-radius: 50%;
+
+  width: 30px;
+  height: 30px;
+
+  font-weight: 700;
+  color: 000;
+  background: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+
+  cursor: pointer;
 }
 
 /* Секция "Наши особенности" */
@@ -328,6 +407,33 @@ img {
   color: var(--secondary-txt-clr);
 }
 
+.about-item {
+  position: relative;
+  width: 370px;
+}
+
+.about-description {
+  position: absolute;
+  width: 100%;
+  height: 70px;
+  bottom: 0;
+
+  padding-top: 27px;
+  padding-bottom: 27px;
+
+  color: var(--nav-bg-clr);
+  background-color: rgba(47, 48, 58, 0.8);
+}
+
+.about-description p {
+  font-family: var(--main-font);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.17;
+  text-transform: uppercase;
+  text-align: center;
+}
+
 /* Наша команда */
 
 .team {
@@ -419,7 +525,11 @@ img {
 
   fill: #afb1b8;
 
-  /* transition: all 1.25s ease; */
+  transition: background-color var(--animation);
+}
+
+.socials-icon {
+  transition: fill var(--animation);
 }
 
 .socials-link:hover,
@@ -465,6 +575,8 @@ img {
 
 .clients-logo {
   border: 1px solid #afb1b8;
+
+  transition: fill var(--animation);
 }
 
 /* Portfolio */
@@ -490,6 +602,9 @@ img {
   color: var(--secondary-txt-clr);
   background: #f5f4fa;
   border-radius: 4px;
+
+  transition: color var(--animation);
+  transition: background-color var(--animation);
 }
 
 .last-btn:last-child {
@@ -511,6 +626,7 @@ img {
 }
 
 .cards-item {
+  overflow: hidden;
   margin-right: 30px;
   margin-bottom: 30px;
 }
@@ -521,9 +637,12 @@ img {
 
 .cards-link {
   display: block;
+  overflow: hidden;
   margin-bottom: 20px;
   text-decoration: none;
   color: var(--secondary-txt-clr);
+
+  transition: box-shadow var(--animation);
 }
 
 .cards-link:hover,
@@ -531,6 +650,52 @@ img {
   box-sizing: border-box;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.cards-link:hover .cards-thumb::before {
+  transform: translateY(0);
+  opacity: 1;
+}
+
+.cards-thumb::before {
+  position: absolute;
+
+  content: '';
+  width: 100%;
+  height: 100%;
+  background-color: rgba(33, 150, 243, 0.9);
+
+  opacity: 0;
+  transform: translateY(100%);
+  transition: var(--animation);
+}
+
+.cards-thumb {
+  position: relative;
+  overflow: hidden;
+}
+
+.cards-pop-up {
+  position: absolute;
+  top: 63px;
+  left: 24px;
+  opacity: 0;
+  transform: translateY(100%);
+  transition: var(--animation);
+}
+
+.cards-pop-up-text {
+  font-family: inherit;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.5;
+
+  color: rgba(255, 255, 255, 1);
+}
+
+.cards-link:hover .cards-pop-up {
+  opacity: 1;
+  transform: translateY(0);
 }
 
 .cards-indent {
@@ -607,6 +772,8 @@ img {
   text-decoration: none;
 
   color: var(--nav-bg-clr);
+
+  transition: color var(--animation);
 }
 
 .footer-contacts {
@@ -619,6 +786,8 @@ img {
   text-decoration: none;
 
   color: rgba(255, 255, 255, 0.6);
+
+  transition: color var(--animation);
 }
 
 .footer-container {
@@ -657,6 +826,8 @@ img {
   border-radius: 50%;
 
   fill: var(--nav-bg-clr);
+
+  transition: background-color var(--animation);
 }
 
 .footer-socials-link:hover,
