--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,7 @@
   --btn-bg: #f5f4fa;
 
   /* animation */
-  --animation: 500ms cubic-bezier(0.4, 0, 0.2, 1);
+  --animation: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 body {
@@ -196,11 +196,9 @@ img {
 
 .header-socials-icon {
   margin-right: 10px;
-  fill: var(--main-txt-clr);
+  fill: currentColor;
 
   transition: fill var(--animation);
-
-  /* fill: currentColor; -- ховер свг через наследование цвета */
 }
 
 .header-item:hover .header-contacts,
@@ -275,11 +273,15 @@ img {
   width: 100vw;
   height: 100vh;
   background: rgba(0, 0, 0, 0.2);
+
+  transition: var(--animation);
 }
 
 .backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
+
+  transition: var(--animation);
 }
 
 .modal {
@@ -296,6 +298,7 @@ img {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+
 }
 
 .close {
@@ -313,6 +316,7 @@ img {
   border: 1px solid rgba(0, 0, 0, 0.1);
 
   cursor: pointer;
+
 }
 
 /* Секция "Наши особенности" */
@@ -414,12 +418,14 @@ img {
 
 .about-description {
   position: absolute;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   width: 100%;
   height: 70px;
   bottom: 0;
-
-  padding-top: 27px;
-  padding-bottom: 27px;
 
   color: var(--nav-bg-clr);
   background-color: rgba(47, 48, 58, 0.8);
@@ -431,7 +437,7 @@ img {
   font-size: 14px;
   line-height: 1.17;
   text-transform: uppercase;
-  text-align: center;
+  
 }
 
 /* Наша команда */
@@ -557,6 +563,8 @@ img {
 
 .clients-item {
   margin-right: 30px;
+  width: 170px;
+  height: 92px;
 }
 
 .clients-item:last-child {
@@ -564,20 +572,25 @@ img {
 }
 
 .clients-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
   fill: #afb1b8;
+
+  transition: fill var(--animation);
 }
 
-.clients-logo:hover,
-.clients-logo:focus {
+.clients-link:hover,
+.clients-link:focus {
   fill: var(--accent-clr);
   border: 1px solid var(--accent-clr);
 }
 
-.clients-logo {
-  border: 1px solid #afb1b8;
-
-  transition: fill var(--animation);
-}
 
 /* Portfolio */
 
@@ -587,8 +600,15 @@ img {
   margin-bottom: 50px;
 }
 
-.radio-btn {
+.btn-item{
   margin-right: 10px;
+}
+
+.btn-item:last-child{
+  margin-right: 0;
+}
+
+.radio-btn {
   padding: 6px 22px;
   border: none;
 
@@ -603,8 +623,12 @@ img {
   background: #f5f4fa;
   border-radius: 4px;
 
-  transition: color var(--animation);
-  transition: background-color var(--animation);
+  cursor: pointer;
+
+  transition: color var(--animation), background-color var(--animation), box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+  0px 1px 2px rgba(0, 0, 0, 0.08),
+  0px 2px 2px rgba(0, 0, 0, 0.12);
+  
 }
 
 .last-btn:last-child {
@@ -620,13 +644,14 @@ img {
   border-radius: 4px;
 }
 
+/* Карточки товара */
+
 .cards-list {
   display: flex;
   flex-wrap: wrap;
 }
 
 .cards-item {
-  overflow: hidden;
   margin-right: 30px;
   margin-bottom: 30px;
 }
@@ -637,10 +662,8 @@ img {
 
 .cards-link {
   display: block;
-  overflow: hidden;
-  margin-bottom: 20px;
+
   text-decoration: none;
-  color: var(--secondary-txt-clr);
 
   transition: box-shadow var(--animation);
 }
@@ -648,11 +671,14 @@ img {
 .cards-link:hover,
 .cards-link:focus {
   box-sizing: border-box;
+  
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.cards-link:hover .cards-thumb::before {
+.cards-link:hover .cards-thumb::before,
+.cards-link:focus .cards-thumb::before
+{
   transform: translateY(0);
   opacity: 1;
 }
@@ -693,7 +719,9 @@ img {
   color: rgba(255, 255, 255, 1);
 }
 
-.cards-link:hover .cards-pop-up {
+.cards-link:hover .cards-pop-up,
+.cards-link:focus .cards-pop-up
+{
   opacity: 1;
   transform: translateY(0);
 }
